web-front/rules/examples/fixtures/ci-scan-project/src/views/pass/CommentOnly.vue
<template>
  <BasePage>
    <!-- 文档示例：<el-button> 不应触发 -->
    <BaseTable :data="[]" />
  </BasePage>
</template>

<script setup lang="ts"></script>
