web-front/rules/examples/fixtures/ci-scan-project/src/views/fail/VBindIs.vue
<template>
  <component v-bind:is="'el-button'" />
</template>

<script setup lang="ts"></script>
